# Rag-In-Crewai

./: .env  README.md  pyproject.toml
src/knowledge/: __init__.py  main.py  main1.py
