[project]
name = "knowledge"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "hasnainbusiness204@gmail.com", email = "163559600+Hasnain-Software-Developer@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "google-generativeai>=0.8.4",
]

[project.scripts]
knowledge = "knowledge:main"
has = "knowledge.main:main"
nain = "knowledge.main1:kickoff"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
